Updated docs.yaml file

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,12 +4,22 @@ on:
   push:
     branches: [ "main" ]
 
+# Important: give the workflow the ability to publish Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          persist-credentials: true   # <-- must be true so the runner can push
 
       - name: Install doxygen & graphviz
         run: sudo apt-get update && sudo apt-get install -y doxygen graphviz
@@ -17,8 +27,7 @@ jobs:
       - name: Generate docs
         run: doxygen Doxyfile
 
-      - name: Deploy to GitHub Pages
+      - name: Deploy to GitHub Pages (peaceiris)
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./docs/html
