--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,14 @@ endif()
 # Code coverage (GCC / Clang only, optional)
 # --------------------------------------------------------
 if(ENABLE_COVERAGE AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+    
+    # Add coverage flags to all targets
+    target_compile_options(math_utils PRIVATE -O0 -g --coverage)
+    if(TARGET runTests)
+        target_compile_options(runTests PRIVATE -O0 -g --coverage)
+        target_link_libraries(runTests PRIVATE --coverage)
+    endif()
+
     find_program(LCOV_PATH lcov)
     find_program(GENHTML_PATH genhtml)
 
@@ -63,7 +71,7 @@ if(ENABLE_COVERAGE AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
     else()
         add_custom_target(coverage
             COMMAND ${LCOV_PATH} --directory . --zerocounters
-            COMMAND $<TARGET_FILE:runTests>
+            COMMAND $<TARGET_FILE:runTests>           # run the tests to generate .gcda files
             COMMAND ${LCOV_PATH} --capture --directory . --output-file coverage.info --ignore-errors mismatch
             COMMAND ${LCOV_PATH} --remove coverage.info '/usr/*' '*/test/*' '*/_deps/*' --output-file coverage.info
             COMMAND ${GENHTML_PATH} coverage.info --output-directory coverage_report --ignore-errors mismatch
