--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,7 +2,7 @@ name: Testing
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "feature/*", "bugfix/*" ]
 
 permissions:
   contents: read
