--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,6 +3,7 @@ name: Testing
 on:
   push:
     branches: [ "main", "feature/*", "bugfix/*" ]
+    branches-ignore: ["gh-pages"]
 
 permissions:
   contents: read
